2.8.2 (10-08-2023)
- Improvement: Adds requiresUnits for CgdIESCodeProviderStrategy 

2.8.1 (01-08-2023)
- Bug fix: Correctly adding client data when calling form43sender

2.8.0 (11-07-2023)
- Improvement: Adds strategy to provide IES code

2.7.3 (15-07-2022)
- Refactor: Add font required to fill CGD form

2.7.2 (05-11-2021)
- Bug fix: CGD will only accept postal code up to 8 characters. Truncating if more

2.7.1 (13-09-2021)
- Bug fix: Numeric memberIDs where not being handled correctly according to the specification

2.7.0 (28-09-2020)
- New feature: Sending proof of address only when address was authorized in GDPR
- Bug fix: Corrected MaritalSTatus codes sent in CGDForm43 web service

2.6.0 (13-09-2020)
- New feature: Sending to cgd the proof of address document

2.5.0 (25-08-2020)
- Refactor: CgdCard was moved from ulisboa specifications to this module
- Refactor: Mod43 Template was moved from ulisboa specifications to this module
- Refactor: upgraded fenixedu-academic-core and other dependencies

2.4.3 (05-04-2020)
- Fix: Articat groupID from com.qubit.solution.fenixedu.build to com.qubit.solution.fenixedu 

2.4.2 (05-04-2020)
2.4.1 (04-04-2020)
- Refactor: upgraded fenixedu-academic-core and other dependencies

2.4.0 (09-03-2020)
- New feature: Support for Java 11

2.3.4 (13-01-2020)
- Refactor: Treasury - Reference addressCountryCode instead of country code

2.3.3 (17-12-2019)
- Refactor: upgraded fenixedu-academic-core and other dependencies

2.3.2 (19-11-2019)
- Bug fix: Update cgd integration web service to only send fiscal codes that are portuguese (others with 0)

2.3.1 (26-09-2019)
- Refactor: update dependencies

2.3.0 (18-06-2019)
- Refactor: update dependencies

2.2.4 (17-06-2019)
- Improvement: Upgraded dependencies versions